--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h1>Your Name</h1>
+      <h1>Pepe Vera</h1>
       <p>Job Title</p>
       <p>Email | Phone | LinkedIn</p>
     </header>
