--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header>
       <h1>Pepe Vera</h1>
-      <p>Job Title</p>
+      <h2>Job Title</h2>
       <p>Email | Phone | LinkedIn</p>
     </header>
     <section>
