added background picture

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       <h2>Education</h2>
       <ul>
         <li>
-          <h3>Degree</h3>
-          <p>School</p>
-          <p>Graduation Date</p>
+          <h3>Mechanical Engineering</h3>
+          <p>UMH</p>
+          <p>2001</p>
         </li>
         <li>
-          <h3>Degree</h3>
-          <p>School</p>
-          <p>Graduation Date</p>
+          <h3>Design for Six Sigma Black Belt</h3>
+          <p>Hollands Innovative</p>
+          <p>2020</p>
         </li>
       </ul>
     </section>
