--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
   <head>
     <title>Resume</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <header>
       <h1>Pepe Vera</h1>
-      <h2>Job Title</h2>
-      <p>Email | Phone | LinkedIn</p>
+      <h2>Systems Engineer</h2>
+      <p>pepe.vera@outlook.com | <a href="https://www.linkedin.com/in/pepe-vera-023505201/" 
+        target="_blank" class="LinkedIn-link">LinkedIn</a></p>
     </header>
     <section>
       <h2>Education</h2>
