--- a/index.html
+++ b/index.html
@@ -11,53 +11,70 @@
       <p>pepe.vera@outlook.com | <a href="https://www.linkedin.com/in/pepe-vera-023505201/" 
         target="_blank" class="LinkedIn-link">LinkedIn</a></p>
     </header>
-    <section>
-      <h2>Work Experience</h2>
-      <ul>
-        <li>
-          <h3>Job Title</h3>
-          <p>Company</p>
-          <p>Dates of Employment</p>
-          <ul>
-            <li>Job responsibility 1</li>
-            <li>Job responsibility 2</li>
-            <li>Job responsibility 3</li>
-          </ul>
-        </li>
-        <li>
-          <h3>Job Title</h3>
-          <p>Company</p>
-          <p>Dates of Employment</p>
-          <ul>
-            <li>Job responsibility 1</li>
-            <li>Job responsibility 2</li>
-            <li>Job responsibility 3</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <section>
-      <h2>Skills</h2>
-      <ul>
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
-      </ul>
-    </section>
-    <section>
-      <h2>Education</h2>
-      <ul>
-        <li>
-          <h3>Mechanical Engineering</h3>
-          <p>UMH</p>
-          <p>2001</p>
-        </li>
-        <li>
-          <h3>Design for Six Sigma Black Belt</h3>
-          <p>Hollands Innovative</p>
-          <p>2020</p>
-        </li>
-      </ul>
-    </section>
+    <div class="grid-container">    
+      <section class="grid-item">
+        <h2>Work Experience</h2>
+        <ul>
+          <li>
+            <h3>Job Title</h3>
+            <p>Company</p>
+            <p>Dates of Employment</p>
+            <ul>
+              <li>Job responsibility 1</li>
+              <li>Job responsibility 2</li>
+              <li>Job responsibility 3</li>
+            </ul>
+          </li>
+          <li>
+            <h3>Job Title</h3>
+            <p>Company</p>
+            <p>Dates of Employment</p>
+            <ul>
+              <li>Job responsibility 1</li>
+              <li>Job responsibility 2</li>
+              <li>Job responsibility 3</li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+      <section class="grid-item">
+        <h2>Skills</h2>
+        <ul>
+          <li>Skill 1</li>
+          <li>Skill 2</li>
+          <li>Skill 3</li>
+        </ul>
+      </section>
+      <section class="grid-item">
+        <h2>Education</h2>
+        <ul>
+          <li>
+            <h3>Mechanical Engineering</h3>
+            <p>UMH</p>
+            <p>2001</p>
+          </li>
+          <li>
+            <h3>Design for Six Sigma Black Belt</h3>
+            <p>Hollands Innovative</p>
+            <p>2020</p>
+          </li>
+        </ul>
+      </section>
+      <section class="grid-item">
+        <h2>Personal Likes</h2>
+        <ul>
+          <li>
+            <h3>Mechanical Engineering</h3>
+            <p>UMH</p>
+            <p>2001</p>
+          </li>
+          <li>
+            <h3>Design for Six Sigma Black Belt</h3>
+            <p>Hollands Innovative</p>
+            <p>2020</p>
+          </li>
+        </ul>
+      </section>
+    </div>
   </body>
 </html>
