--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Resume</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
+  <script src="/jsResume.js"></script>
   <body>
     <header>
       <h1>Pepe Vera</h1>
