--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
       <p>pepe.vera@outlook.com | <a href="https://www.linkedin.com/in/pepe-vera-023505201/" 
         target="_blank" class="LinkedIn-link">LinkedIn</a></p>
     </header>
-    <div class="grid-container">    
-      <section class="grid-item">
+    <div class="big-buttons">
+      <button class="work-exp-button" onclick="window.location.href='#work-experience'">Work-Experience</button>
+      <button class="work-skills-button" onclick="window.location.href='#skills'">Work Skills</button>
+      <button class="work-show-button" onclick="window.location.href='#portfolio'">Portfolio</button>
+      <button class="personal-button" onclick="window.location.href='#work-experience'">Personal</button>
+    </div>
+    <!--<div class="grid-container">-->    
+      <section id="work-experience" class="grid-item">
         <h2>Work Experience</h2>
         <ul>
           <li>
@@ -26,6 +32,7 @@
               <li>Job responsibility 3</li>
             </ul>
           </li>
+          <br></br>
           <li>
             <h3>Job Title</h3>
             <p>Company</p>
@@ -38,7 +45,7 @@
           </li>
         </ul>
       </section>
-      <section class="grid-item">
+      <section id="skills" class="grid-item">
         <h2>Skills</h2>
         <ul>
           <li>Skill 1</li>
@@ -46,8 +53,8 @@
           <li>Skill 3</li>
         </ul>
       </section>
-      <section class="grid-item">
-        <h2>Education</h2>
+      <section id="portfolio"  class="grid-item">
+        <h2>Portfolio</h2>
         <ul>
           <li>
             <h3>Mechanical Engineering</h3>
@@ -61,7 +68,7 @@
           </li>
         </ul>
       </section>
-      <section class="grid-item">
+      <section id="personal" class="grid-item">
         <h2>Personal Likes</h2>
         <ul>
           <li>
@@ -76,6 +83,6 @@
           </li>
         </ul>
       </section>
-    </div>
+    <!--</div>-->
   </body>
 </html>
