--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         target="_blank" class="LinkedIn-link">LinkedIn</a></p>
     </header>
     <div class="big-buttons">
-      <button class="work-exp-button" onclick="window.location.href='#work-experience'">Work-Experience</button>
-      <button class="work-skills-button" onclick="window.location.href='#skills'">Work Skills</button>
-      <button class="work-show-button" onclick="window.location.href='#portfolio'">Portfolio</button>
-      <button class="personal-button" onclick="window.location.href='#work-experience'">Personal</button>
+      <button onclick="window.location.href='#work-experience'">Work-Experience</button>
+       <button onclick="window.location.href='#skills'">Work Skills</button> 
+      <button onclick="window.location.href='#portfolio'">Portfolio</button>
+      <button onclick="window.location.href='#work-experience'">Personal</button>
     </div>
     <!--<div class="grid-container">-->    
       <section id="work-experience" class="grid-item">
