--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button onclick="window.location.href='#work-experience'">Work-Experience</button>
       <button onclick="window.location.href='#skills'">Work Skills</button> 
       <button onclick="window.location.href='#portfolio'">Portfolio</button>
-      <button onclick="window.location.href='#work-experience'">Personal</button>
+      <button onclick="window.location.href='#personal'">Personal</button>
     </div>
     <!--<div class="grid-container">-->    
       <section id="work-experience" class="grid-item">
